[package]
name = "mitamoru"
version = "0.1.0"
authors = ["Fumiya Oyama <boxpurin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
tokio = { version ="0.2",features=["macros"]}

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "utils",
]
version = "0.9.0-rc.2"